# instron_data_processing

./: .aider.context.yaml  .gitignore  README.md  README.txt  pyproject.toml
.coding-aider-plans/: add_default_plots_context.yaml  fix_numpy_import.md  fix_numpy_import_checklist.md  fix_numpy_import_context.yaml  fix_time_col_error.md  fix_time_col_error_checklist.md  fix_time_col_error_context.yaml
.github/workflows/: python-publish.yml
analysis_lib/: README.txt  _init_.py  axial_analysis.py  common_utils.py  config_defaults.py  plotting_tools.py  torsional_analysis.py  workflow.py
latex_glove/oct_24/: main.py
latex_glove/oct_24/data/: Test6.Stop.csv  Test6.im_gpf  Test6.steps.tracking.csv
matmech/: __init__.py  axial_analysis.py  config_defaults.py  plotting_tools.py  torsional_analysis.py  workflow.py
sample_data/: sample_bluehill.csv
silicone_10a/oct_22/: Graphs.xlsx  main.py
silicone_10a/oct_22/data/: Test7.im_gpf  Test7.specimen.txt  Test7.steps.tracking.csv  Test7.steps.trends.csv
tests/: README.txt  test_analysis_modules.py
tests/Silicone_30a/Test1/: Test1.specimen.txt
tests/latex_glove/oct_24/: main.py
tests/latex_glove/oct_24/data/: Test6.steps.trends.csv
tests/sample_data/: sample_bluehill.csv  sample_wavematrix_torsion.csv
tests/silicone_10a/oct_22/: main.py
tests/silicone_10a/oct_22/data/: Test7.Stop.csv
tests/silicone_30a/oct_29/: main.py
tests/silicone_30a/oct_29/data/: Test1.Stop.csv  Test1.im_gpf  Test1.steps.tracking.csv  (+1 more)
tests/silicone_30a/oct_29_t2/: main.py
universal_test_analyzer.egg-info/: PKG-INFO  SOURCES.txt
(+1 files in other folders)
