# pyproject.toml

[project]
name = "mat-analyzer"
version = "1.0.0"
description = "A library for analyzing data from universal test machines."
authors = [{ name = "Your Name", email = "info@example.com" }] # Replace with actual author info
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
]

[tool.setuptools]
packages = ["mat_analyzer"]
